syntax = "proto3";

package kv_store_v1;

option go_package = "github.com/shrtyk/kv-store/proto/gen;kv_store_v1";

service KVStore {
  rpc Get(GetReq) returns (GetResp);
  rpc Put(PutReq) returns (PutResp);
  rpc Delete(DeleteReq) returns (DeleteResp);
}

message Entry {
  string key = 1;
  string value = 2;
}

message GetReq { string key = 1; }
message GetResp { Entry entry = 1; }

message DeleteReq { string key = 1; }
message DeleteResp {}

message PutReq {
  string key = 1;
  string value = 2;
}
message PutResp {}
